--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </style>
   </head>
   <body>
+    <div id="overlay"></div>
+    <div id="backdrop"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
